--- a/css/main.scss
+++ b/css/main.scss
@@ -110,3 +110,17 @@ table{
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(240, 138, 93, 1);
     }
 }
+
+$socialcolors:(
+    tw:#1DA1F2,
+    fb:#1877F2,
+    ig:#E4405F,
+    yt:#CD201F
+);
+
+@each $nombre, $valor in $socialcolors {
+    .social-#{$nombre}{
+        color: $valor;
+        text-decoration: none;
+    }
+}
